# web_8

./: config.ini  connect.py  pyproject.toml  quotes_finder.py  seeds.py
part_2/: connect_model.py  consumer.py  producer.py
