[tool.poetry]
name = "web-8"
version = "0.1.0"
description = ""
authors = ["Igor-Mozharov <r5@ukr.net>"]
readme = "README.md"
packages = [{include = "web_8"}]

[tool.poetry.dependencies]
python = "3.11"
mongoengine = "^0.26.0"
pika = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
